<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kinect_ros2</name>
  <version>0.0.1</version>
  <description>Kinect v1 driver for ROS2</description>
  <maintainer email="fernandodelio@gmail.com">Fernando de Lio</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>libfreenect</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>
  <depend>depth_image_proc</depend>

  <exec_depend>image_tools</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>